--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -27,6 +27,11 @@
                         <path d="M19,13H5V11H19V13Z"/>
                     </svg>
                 </button>
+                <button id="quitBtn" class="title-bar-btn" title="Quit">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"/>
+                    </svg>
+                </button>
             </div>
         </div>
 
